--- a/index.html
+++ b/index.html
@@ -1,4 +1,19 @@
-<div class="spinner">
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Simple HTML with External CSS and JS</title>
+  <link rel="stylesheet" href="global.css" />
+</head>
+<body>
+
+  <h1>Hello, World!</h1>
+  <button id="clickBtn">Click me</button>
+  <p id="message"></p>
+  <div class="spinner">
   <div></div>
   <div></div>
   <div></div>
@@ -6,3 +21,8 @@
   <div></div>
   <div></div>
 </div>
+
+  <script src="script.js"></script>
+
+</body>
+</html>
