--- a/index.html
+++ b/index.html
@@ -10,17 +10,50 @@
 </head>
 <body>
 
-  <h1>Hello, World!</h1>
-  <button id="clickBtn">Click me</button>
-  <p id="message"></p>
-  <div class="spinner">
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-</div>
+  <header class="bg-gray-900 text-white p-6">
+  <nav class="container mx-auto flex justify-between items-center">
+    <div class="text-xl font-bold">MyBrand</div>
+    <ul class="flex space-x-6">
+      <li><a href="#" class="hover:text-yellow-400">Home</a></li>
+      <li><a href="#" class="hover:text-yellow-400">Features</a></li>
+      <li><a href="#" class="hover:text-yellow-400">Pricing</a></li>
+      <li><a href="#" class="hover:text-yellow-400">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
+<section class="hero min-h-screen flex flex-col items-center justify-center bg-gradient-to-br from-indigo-600 via-pink-500 to-yellow-400 text-white text-center p-8">
+  <h1 class="text-5xl font-extrabold mb-6 max-w-xl leading-tight">
+    Welcome to Our Platform
+  </h1>
+  <p class="text-xl mb-8 max-w-lg">
+    Experience the next level of productivity with our all-in-one solution.
+  </p>
+  <div class="relative inline-flex items-center justify-center gap-4 group">
+    <div
+      class="absolute inset-0 duration-1000 opacity-60 transition-all bg-gradient-to-r from-indigo-500 via-pink-500 to-yellow-400 rounded-xl blur-lg filter group-hover:opacity-100 group-hover:duration-200"
+    ></div>
+    <a
+      role="button"
+      class="group relative inline-flex items-center justify-center text-base rounded-xl bg-gray-900 px-8 py-3 font-semibold text-white transition-all duration-200 hover:bg-gray-800 hover:shadow-lg hover:-translate-y-0.5 hover:shadow-gray-600/30"
+      title="payment"
+      href="#"
+    >
+      Get Started For Free
+      <svg
+        aria-hidden="true"
+        viewBox="0 0 10 10"
+        height="10"
+        width="10"
+        fill="none"
+        class="mt-0.5 ml-2 -mr-1 stroke-white stroke-2"
+      >
+        <path d="M0 5h7" class="transition opacity-0 group-hover:opacity-100"></path>
+        <path d="M1 1l4 4-4 4" class="transition group-hover:translate-x-[3px]"></path>
+      </svg>
+    </a>
+  </div>
+</section>
 
   <script src="script.js"></script>
 
