--- a/index.html
+++ b/index.html
@@ -1,56 +1,123 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <header class="bg-gray-900 text-white p-6">
-  <nav class="container mx-auto flex justify-between items-center">
-    <div class="text-xl font-bold">MyBrand</div>
-    <ul class="flex space-x-6">
-      <li><a href="#" class="hover:text-yellow-400">Home</a></li>
-      <li><a href="#" class="hover:text-yellow-400">Features</a></li>
-      <li><a href="#" class="hover:text-yellow-400">Pricing</a></li>
-      <li><a href="#" class="hover:text-yellow-400">Contact</a></li>
-    </ul>
-  </nav>
-</header>
-  <link rel="stylesheet" href="global.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Matrix Background</title>
+  <style>
+    /* From Uiverse.io by Danishrehman786 */
+    html, body {
+      margin: 0;
+      height: 100%;
+      width: 100%;
+      overflow: hidden;
+      background-color: #0d0d1a;
+      font-family: Arial, sans-serif;
+    }
+
+    .matrix-container {
+      width: 100%;
+      height: 100%;
+      perspective: 1500px;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .matrix-grid {
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(#262645 1px, transparent 1px),
+        linear-gradient(90deg, #262645 1px, transparent 1px),
+        repeating-linear-gradient(
+          45deg,
+          rgba(0, 255, 170, 0.05) 0px 1px,
+          transparent 1px 12px
+        ),
+        repeating-linear-gradient(
+          -45deg,
+          rgba(0, 255, 170, 0.05) 0px 1px,
+          transparent 1px 12px
+        ),
+        radial-gradient(circle at center, #0a0a1a 0%, #000 100%);
+      background-size:
+        28px 28px,
+        28px 28px,
+        50px 50px,
+        50px 50px,
+        cover;
+      border: 1px solid rgba(0, 255, 170, 0.1);
+      box-shadow:
+        inset 0 0 40px rgba(0, 255, 170, 0.1),
+        0 0 60px rgba(0, 255, 170, 0.15);
+      transform-style: preserve-3d;
+      transition: all 0.6s ease-in-out;
+      position: relative;
+    }
+
+    .matrix-grid::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: linear-gradient(
+        90deg,
+        transparent,
+        rgba(0, 255, 170, 0.4),
+        transparent
+      );
+      animation: borderFlow 6s linear infinite;
+      pointer-events: none;
+      mask:
+        linear-gradient(#fff 0 0) padding-box,
+        linear-gradient(#fff 0 0);
+      -webkit-mask-composite: destination-out;
+      mask-composite: exclude;
+    }
+
+    .matrix-grid::after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 160px;
+      height: 160px;
+      background: radial-gradient(
+        circle,
+        rgba(0, 255, 170, 0.15) 0%,
+        transparent 70%
+      );
+      transform: translate(-50%, -50%);
+      animation: pulse 3.5s ease-in-out infinite alternate;
+      z-index: 1;
+      pointer-events: none;
+    }
+
+    @keyframes borderFlow {
+      0% {
+        background-position: 0% 50%;
+      }
+      100% {
+        background-position: 200% 50%;
+      }
+    }
+
+    @keyframes pulse {
+      0% {
+        transform: translate(-50%, -50%) scale(0.85);
+        opacity: 0.2;
+      }
+      100% {
+        transform: translate(-50%, -50%) scale(1.1);
+        opacity: 0.5;
+      }
+    }
+  </style>
 </head>
 <body>
-
-<section class="hero min-h-screen flex flex-col items-center justify-center bg-gradient-to-br from-indigo-600 via-pink-500 to-yellow-400 text-white text-center p-8">
-  <h1 class="text-5xl font-extrabold mb-6 max-w-xl leading-tight">
-    Welcome to Our Platform
-  </h1>
-  <p class="text-xl mb-8 max-w-lg">
-    Experience the next level of productivity with our all-in-one solution.
-  </p>
-  <div class="relative inline-flex items-center justify-center gap-4 group">
-    <div
-      class="absolute inset-0 duration-1000 opacity-60 transition-all bg-gradient-to-r from-indigo-500 via-pink-500 to-yellow-400 rounded-xl blur-lg filter group-hover:opacity-100 group-hover:duration-200"
-    ></div>
-    <a
-      role="button"
-      class="group relative inline-flex items-center justify-center text-base rounded-xl bg-gray-900 px-8 py-3 font-semibold text-white transition-all duration-200 hover:bg-gray-800 hover:shadow-lg hover:-translate-y-0.5 hover:shadow-gray-600/30"
-      title="payment"
-      href="#"
-    >
-      Get Started For Free
-      <svg
-        aria-hidden="true"
-        viewBox="0 0 10 10"
-        height="10"
-        width="10"
-        fill="none"
-        class="mt-0.5 ml-2 -mr-1 stroke-white stroke-2"
-      >
-        <path d="M0 5h7" class="transition opacity-0 group-hover:opacity-100"></path>
-        <path d="M1 1l4 4-4 4" class="transition group-hover:translate-x-[3px]"></path>
-      </svg>
-    </a>
+  <div class="matrix-container">
+    <div class="matrix-grid"></div>
   </div>
-</section>
-
-  <script src="script.js"></script>
-
 </body>
 </html>
