--- a/index.html
+++ b/index.html
@@ -119,5 +119,17 @@
   <div class="matrix-container">
     <div class="matrix-grid"></div>
   </div>
+  <section class="hero-section">
+  <div class="hero-content">
+    <h1>Welcome to Unlite</h1>
+    <p>Your ultimate platform to connect creators and brands seamlessly.</p>
+    <a href="#get-started" class="btn-primary">Get Started</a>
+  </div>
+  <div class="hero-image">
+    <!-- Replace with your image or illustration -->
+    <img src="https://via.placeholder.com/450x300?text=Unlite+Hero+Image" alt="Unlite platform" />
+  </div>
+</section>
+
 </body>
 </html>
